create API for workorder
