# internal/dto/workorder.go
@@ -1,0 +1,5 @@
+package dto
+
+type AssignMechanic struct {
+	MechanicID string `json:"mechanic_id" binding:"required,uuid"`
+}
