# internal/handlers/http/workorder/workorder.go
@@ -1,0 +1,116 @@
+package workorder
+
+import (
+	"fmt"
+	"net/http"
+	"reflect"
+	"workshop-management/internal/dto"
+	"workshop-management/internal/services/workorder"
+	"workshop-management/pkg/logger"
+	"workshop-management/pkg/messages"
+	"workshop-management/pkg/response"
+	"workshop-management/utils"
+
+	"github.com/gin-gonic/gin"
+)
+
+type HandlerWorkOrder struct {
+	Service *workorder.ServiceWorkOrder
+}
+
+func NewWorkOrderHandler(s *workorder.ServiceWorkOrder) *HandlerWorkOrder {
+	return &HandlerWorkOrder{
+		Service: s,
+	}
+}
+
+// CreateFromBooking godoc
+// @Summary Create a work order from a booking
+// @Description Create a new work order from an existing booking ID
+// @Tags Work Orders
+// @Accept json
+// @Produce json
+// @Param id path string true "Booking ID"
+// @Success 201 {object} response.Success
+// @Failure 400 {object} response.Error
+// @Failure 500 {object} response.Error
+// @Router /workorders/from-booking/{id} [post]
+// @Security Bearer
+func (h *HandlerWorkOrder) CreateFromBooking(ctx *gin.Context) {
+	authData := utils.GetAuthData(ctx)
+	userId := utils.InterfaceString(authData["user_id"])
+	logId := utils.GenerateLogId(ctx)
+	logPrefix := fmt.Sprintf("[%s][WorkOrderHandler][CreateFromBooking]", logId)
+
+	bookingId, err := utils.ValidateUUID(ctx, logId)
+	if err != nil {
+		return
+	}
+
+	data, err := h.Service.CreateFromBooking(bookingId, userId)
+	if err != nil {
+		logger.WriteLog(logger.LogLevelError, fmt.Sprintf("%s; CreateFromBooking; Error: %+v", logPrefix, err))
+		res := response.Response(http.StatusInternalServerError, messages.MsgFail, logId, nil)
+		res.Error = err.Error()
+		ctx.JSON(http.StatusInternalServerError, res)
+		return
+	}
+
+	res := response.Response(http.StatusCreated, "success", logId, data)
+	logger.WriteLog(logger.LogLevelDebug, fmt.Sprintf("%s; Response: %+v;", logPrefix, utils.JsonEncode(data)))
+	ctx.JSON(http.StatusCreated, res)
+}
+
+// AssignMechanic godoc
+// @Summary Assign a mechanic to a work order
+// @Description Assign a mechanic to an existing work order
+// @Tags Work Orders
+// @Accept json
+// @Produce json
+// @Param id path string true "Work Order ID"
+// @Param mechanic body dto.AssignMechanic true "Mechanic information"
+// @Success 200 {object} response.Success
+// @Failure 400 {object} response.Error
+// @Failure 404 {object} response.Error
+// @Failure 500 {object} response.Error
+// @Router /workorders/{id}/assign-mechanic [put]
+// @Security Bearer
+func (h *HandlerWorkOrder) AssignMechanic(ctx *gin.Context) {
+	logId := utils.GenerateLogId(ctx)
+	logPrefix := fmt.Sprintf("[%s][WorkOrderHandler][AssignMechanic]", logId)
+	authData := utils.GetAuthData(ctx)
+	userId := utils.InterfaceString(authData["user_id"])
+
+	workOrderId, err := utils.ValidateUUID(ctx, logId)
+	if err != nil {
+		return
+	}
+	var req dto.AssignMechanic
+	if err := ctx.BindJSON(&req); err != nil {
+		logger.WriteLog(logger.LogLevelError, fmt.Sprintf("%s; BindJSON ERROR: %s;", logPrefix, err.Error()))
+		res := response.Response(http.StatusBadRequest, messages.InvalidRequest, logId, nil)
+		res.Error = utils.ValidateError(err, reflect.TypeOf(req), "json")
+		ctx.JSON(http.StatusBadRequest, res)
+		return
+	}
+	logger.WriteLog(logger.LogLevelDebug, fmt.Sprintf("%s; Request: %+v;", logPrefix, utils.JsonEncode(req)))
+
+	rows, err := h.Service.AssignMechanic(req, workOrderId, userId)
+	if err != nil {
+		logger.WriteLog(logger.LogLevelError, fmt.Sprintf("%s; Service.AssignMechanic; Error: %+v", logPrefix, err))
+		res := response.Response(http.StatusInternalServerError, messages.MsgFail, logId, nil)
+		res.Error = err.Error()
+		ctx.JSON(http.StatusInternalServerError, res)
+		return
+	}
+	if rows == 0 {
+		res := response.Response(http.StatusNotFound, messages.MsgNotFound, logId, nil)
+		res.Error = response.Errors{Code: http.StatusNotFound, Message: messages.NotFound}
+		ctx.JSON(http.StatusNotFound, res)
+		return
+	}
+
+	res := response.Response(http.StatusOK, "success", logId, nil)
+	logger.WriteLog(logger.LogLevelDebug, fmt.Sprintf("%s; Response: %+v;", logPrefix, utils.JsonEncode(res)))
+	ctx.JSON(http.StatusOK, res)
+}
